KOGITO-6013: Gateway API: task comments and attachments update, delete (#1069)
* KOGITO-6013: Gateway API: task comments and attachments update, delete operations

* added update and delete attachment test to KogitoRuntimeClientTest