@@ -30,6 +30,8 @@ import org.kie.kogito.index.event.KogitoJobCloudEvent;
 import org.kie.kogito.index.event.KogitoProcessCloudEvent;
 import org.kie.kogito.index.event.KogitoUserTaskCloudEvent;
 import org.kie.kogito.index.graphql.GraphQLSchemaManager;
+import org.kie.kogito.index.model.Attachment;
+import org.kie.kogito.index.model.Comment;
 import org.kie.kogito.index.model.UserTaskInstance;
 import org.kie.kogito.index.service.AbstractIndexingIT;
 import org.kie.kogito.persistence.protobuf.ProtobufService;
@@ -59,6 +61,10 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
     @Inject
     public ProtobufService protobufService;
 
+    private String processId = "travels";
+    String user = "jdoe";
+    List<String> groups = Arrays.asList("managers", "users", "IT");
+
     private KogitoRuntimeClient dataIndexApiClient;
 
     @BeforeEach
@@ -70,7 +76,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testProcessInstanceAbort() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
         indexProcessCloudEvent(startEvent);
@@ -83,7 +88,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testProcessInstanceRetry() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
         indexProcessCloudEvent(startEvent);
@@ -96,7 +100,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testProcessInstanceSkip() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
         indexProcessCloudEvent(startEvent);
@@ -109,7 +112,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testProcessInstanceUpdateVariables() {
-        String processId = "travels";
         String variablesUpdated = "variablesUpdated";
         String processInstanceId = UUID.randomUUID().toString();
 
@@ -124,7 +126,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testProcessInstanceNodeDefinitions() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
         indexProcessCloudEvent(startEvent);
@@ -136,7 +137,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testProcessInstanceDiagram() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
         indexProcessCloudEvent(startEvent);
@@ -149,7 +149,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testNodeInstanceTrigger() {
-        String processId = "travels";
         String nodeId = "nodeIdToTrigger";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
@@ -163,7 +162,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testNodeInstanceRetrigger() {
-        String processId = "travels";
         String nodeInstanceId = "nodeInstanceIdToRetrigger";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
@@ -177,7 +175,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testNodeInstanceCancel() {
-        String processId = "travels";
         String nodeInstanceId = "nodeInstanceIdToCancel";
         String processInstanceId = UUID.randomUUID().toString();
         KogitoProcessCloudEvent startEvent = getProcessCloudEvent(processId, processInstanceId, ACTIVE, null, null, null);
@@ -192,7 +189,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
     @Test
     void testJobCancel() {
         String jobId = UUID.randomUUID().toString();
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
 
         KogitoJobCloudEvent event = getJobCloudEvent(jobId, processId, processInstanceId, null, null, "EXECUTED");
@@ -207,7 +203,6 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
     @Test
     void testJobReschedule() {
         String jobId = UUID.randomUUID().toString();
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         String data = "jobNewData";
 
@@ -223,11 +218,8 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testGetTaskSchema() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         String taskId = UUID.randomUUID().toString();
-        String user = "jdoe";
-        List<String> groups = Arrays.asList("managers", "users", "IT");
 
         KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
                 null, "InProgress", user);
@@ -246,12 +238,9 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testUpdateUserTaskInstance() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         String taskId = UUID.randomUUID().toString();
-        String user = "jdoe";
-        List<String> groups = Arrays.asList("managers", "users", "IT");
-        String newDescription = "NewDescription}";
+        String newDescription = "NewDescription";
 
         KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
                 null, "InProgress", user);
@@ -275,11 +264,8 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
 
     @Test
     void testCreateTaskComment() {
-        String processId = "travels";
         String processInstanceId = UUID.randomUUID().toString();
         String taskId = UUID.randomUUID().toString();
-        String user = "jdoe";
-        List<String> groups = Arrays.asList("managers", "users", "IT");
         String comment = "Comment to add";
 
         KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
@@ -302,12 +288,61 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
     }
 
     @Test
-    void testCreateTaskAttachment() {
-        String processId = "travels";
+    void testUpdateUserTaskInstanceComment() {
         String processInstanceId = UUID.randomUUID().toString();
         String taskId = UUID.randomUUID().toString();
-        String user = "jdoe";
-        List<String> groups = Arrays.asList("managers", "users", "IT");
+        String commentId = UUID.randomUUID().toString();
+        String commentContent = "commentContent";
+
+        KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
+                null, "InProgress", user);
+        UserTaskInstance userTaskInstance = event.getData();
+        userTaskInstance.setComments(List.of(Comment.builder().id(commentId).build()));
+        event.setData(userTaskInstance);
+        indexUserTaskCloudEvent(event);
+        checkOkResponse("{ \"query\" : \"mutation { UserTaskInstanceCommentUpdate ( " +
+                "user: \\\"" + user + "\\\", " +
+                "groups: [\\\"managers\\\", \\\"users\\\", \\\"IT\\\"]," +
+                "commentId:  \\\"" + commentId + "\\\"" +
+                "comment:  \\\"" + commentContent + "\\\"" +
+                ")}\"}");
+        ArgumentCaptor<UserTaskInstance> userTaskInstanceCaptor = ArgumentCaptor.forClass(UserTaskInstance.class);
+
+        verify(dataIndexApiClient).updateUserTaskInstanceComment(eq("http://localhost:8080"),
+                userTaskInstanceCaptor.capture(),
+                eq(user), eq(groups), eq(commentId), eq(commentContent));
+        assertUserTaskInstance(userTaskInstanceCaptor.getValue(), taskId, processId, processInstanceId, user);
+    }
+
+    @Test
+    void testDeleteUserTaskInstanceComment() {
+        String processInstanceId = UUID.randomUUID().toString();
+        String taskId = UUID.randomUUID().toString();
+        String commentId = UUID.randomUUID().toString();
+
+        KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
+                null, "InProgress", user);
+        UserTaskInstance userTaskInstance = event.getData();
+        userTaskInstance.setComments(List.of(Comment.builder().id(commentId).build()));
+        event.setData(userTaskInstance);
+        indexUserTaskCloudEvent(event);
+        checkOkResponse("{ \"query\" : \"mutation { UserTaskInstanceCommentDelete ( " +
+                "user: \\\"" + user + "\\\", " +
+                "groups: [\\\"managers\\\", \\\"users\\\", \\\"IT\\\"]," +
+                "commentId:  \\\"" + commentId + "\\\"" +
+                ")}\"}");
+        ArgumentCaptor<UserTaskInstance> userTaskInstanceCaptor = ArgumentCaptor.forClass(UserTaskInstance.class);
+
+        verify(dataIndexApiClient).deleteUserTaskInstanceComment(eq("http://localhost:8080"),
+                userTaskInstanceCaptor.capture(),
+                eq(user), eq(groups), eq(commentId));
+        assertUserTaskInstance(userTaskInstanceCaptor.getValue(), taskId, processId, processInstanceId, user);
+    }
+
+    @Test
+    void testCreateTaskAttachment() {
+        String processInstanceId = UUID.randomUUID().toString();
+        String taskId = UUID.randomUUID().toString();
         String attachmentName = "attachment name";
         String attachmentUri = "https://drive.google.com/file/d/1Z_Lipg2jzY9TNewTaskAttachmentUri";
 
@@ -329,6 +364,60 @@ public abstract class AbstractGraphQLRuntimesQueriesIT extends AbstractIndexingI
                 eq(user), eq(groups),
                 eq(attachmentName),
                 eq(attachmentUri));
+        assertUserTaskInstance(userTaskInstanceCaptor.getValue(), taskId, processId, processInstanceId, user);
+    }
+
+    @Test
+    void testUpdateUserTaskInstanceAttachment() {
+        String processInstanceId = UUID.randomUUID().toString();
+        String taskId = UUID.randomUUID().toString();
+        String attachmentId = UUID.randomUUID().toString();
+        String attachmentName = "attachmentName";
+        String attachmentUri = "attachmentUri";
+
+        KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
+                null, "InProgress", user);
+        UserTaskInstance userTaskInstance = event.getData();
+        userTaskInstance.setAttachments(List.of(Attachment.builder().id(attachmentId).build()));
+        event.setData(userTaskInstance);
+        indexUserTaskCloudEvent(event);
+        checkOkResponse("{ \"query\" : \"mutation { UserTaskInstanceAttachmentUpdate ( " +
+                "user: \\\"" + user + "\\\", " +
+                "groups: [\\\"managers\\\", \\\"users\\\", \\\"IT\\\"]," +
+                "attachmentId:  \\\"" + attachmentId + "\\\"" +
+                "name:  \\\"" + attachmentName + "\\\"" +
+                "uri:  \\\"" + attachmentUri + "\\\"" +
+                ")}\"}");
+        ArgumentCaptor<UserTaskInstance> userTaskInstanceCaptor = ArgumentCaptor.forClass(UserTaskInstance.class);
+
+        verify(dataIndexApiClient).updateUserTaskInstanceAttachment(eq("http://localhost:8080"),
+                userTaskInstanceCaptor.capture(),
+                eq(user), eq(groups), eq(attachmentId), eq(attachmentName), eq(attachmentUri));
+        assertUserTaskInstance(userTaskInstanceCaptor.getValue(), taskId, processId, processInstanceId, user);
+    }
+
+    @Test
+    void testDeleteUserTaskInstanceAttachment() {
+        String processInstanceId = UUID.randomUUID().toString();
+        String taskId = UUID.randomUUID().toString();
+        String attachmentId = UUID.randomUUID().toString();
+
+        KogitoUserTaskCloudEvent event = getUserTaskCloudEvent(taskId, processId, processInstanceId, null,
+                null, "InProgress", user);
+        UserTaskInstance userTaskInstance = event.getData();
+        userTaskInstance.setAttachments(List.of(Attachment.builder().id(attachmentId).build()));
+        event.setData(userTaskInstance);
+        indexUserTaskCloudEvent(event);
+        checkOkResponse("{ \"query\" : \"mutation { UserTaskInstanceAttachmentDelete ( " +
+                "user: \\\"" + user + "\\\", " +
+                "groups: [\\\"managers\\\", \\\"users\\\", \\\"IT\\\"]," +
+                "attachmentId:  \\\"" + attachmentId + "\\\"" +
+                ")}\"}");
+        ArgumentCaptor<UserTaskInstance> userTaskInstanceCaptor = ArgumentCaptor.forClass(UserTaskInstance.class);
+
+        verify(dataIndexApiClient).deleteUserTaskInstanceAttachment(eq("http://localhost:8080"),
+                userTaskInstanceCaptor.capture(),
+                eq(user), eq(groups), eq(attachmentId));
         assertUserTaskInstance(userTaskInstanceCaptor.getValue(), taskId, processId, processInstanceId, user);
     }
 
